Fix primary color in dark mode

--- a/docs/website/src/css/custom.css
+++ b/docs/website/src/css/custom.css
@@ -48,7 +48,7 @@
   --ifm-navbar-background-color: #191937;
   --ifm-link-color: #f3ff36;
   --ifm-background-color: #F7F9FC;
-  --ifm-color-primary: #4C4898;
+  --ifm-color-primary: #f3ff36;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   --ifm-font-color-base: #F7F9FC;
   --ifm-gradient: transparent;
